# forumbee-mcp-server

./: LICENSE  README.md
docs/plans/: 2026-03-20-forumbee-mcp-server-design.md  2026-03-20-forumbee-mcp-server-plan.md
mcp-server/: .env.example  pyproject.toml  setup.sh
mcp-server/src/forumbee_mcp/: __init__.py  client.py  server.py
